force-app/main/default/objects/Claim_Ithem__c/Claim_Ithem__c.object-meta.xml
<CustomObject>
    <label>Claim Ithem</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Claim Ithem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim ithems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>