force-app/main/default/objects/Claim_Ithem__c/fields/claim__c.field-meta.xml
<CustomField>
    <fullName>claim__c</fullName>
    <label>claim</label>
    <referenceTo>claim__c</referenceTo>
    <relationshipLabel>Claim ithems</relationshipLabel>
    <relationshipName>Claim_ithems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>