force-app/main/default/objects/Claim_Ithem__c/fields/Damage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Damage_Amount__c</fullName>
    <label>Damage Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>