force-app/main/default/objects/Claim_Ithem__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <label>ItemType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Part</fullName>
            </value>
            <value>
                <fullName>Medical Expense</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>